# ps5-downloader

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  payload_sender.py  pyproject.toml
.github/workflows/: release.yml
docs/: HOSTER_SUPPORT.md  NANODNS.md  PC_DEV.md  PS5_BUILD.md  PS5_STANDALONE.md  RELEASE_0.1.0.md  RESEARCH.md
packaging/: ps5-downloader-gui.spec
scripts/: build-appimage.sh  build-desktop-linux.sh  build-ps5-elf.sh  ps5-downloader-gui.bat  ps5-downloader-gui.sh
src/ps5_downloader/: desktop_launcher.py
src/ps5_downloader/cli/: main.py
src/ps5_downloader/core/: downloader.py  models.py  resolver.py  settings.py  storage.py  utils.py
src/ps5_downloader/desktop/: __init__.py  app.py  client.py  payload.py
src/ps5_downloader/plugins/: akirabox.py  base.py  buzzheavier.py  direct_http.py  generic_html.py  github.py  mediafire.py  onefichier.py  registry.py  rootz.py
src/ps5_downloader/server/: api.py
src/ps5_downloader/server/static/: app.js  index.html  styles.css
src/ps5_payload/: Makefile  diag_status.c  main.c  ps5-downloader.elf
tests/: test_desktop_client.py  test_desktop_payload.py  test_downloader.py  test_parser.py  test_plugins.py  test_queue.py  test_safety.py
tests/fixtures/: mediafire_public.html
